[gd_scene load_steps=2 format=3 uid="uid://dino8xw2qrab1"]

[ext_resource type="Script" path="res://src/scenes/enemy/enemy_navigation_manager.gd" id="1_xlyyp"]

[node name="EnemyNavigationManager" type="Node2D"]
script = ExtResource("1_xlyyp")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="chase_player" from="." to="." method="_on_chase_player"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
